--- a/TruckV2X/style.css
+++ b/TruckV2X/style.css
@@ -259,7 +259,7 @@ h3 {
 
 .figure-img {
     max-width: 100%; /* 图片宽度不超过容器，确保等比例缩放 */
-    max-height: 50%; /* 图片宽度不超过容器，确保等比例缩放 */
+    max-height: 500px; /* 图片宽度不超过容器，确保等比例缩放 */
     height: auto;    /* 高度自动计算，防止变形 */
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0,0,0,0.05);
